--- a/index.html
+++ b/index.html
@@ -30,37 +30,30 @@
     <div class="wrapper">
         <!-- Content start -->
         <!-- Header -->
-        <section class="header-container">
-            <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
-                <div class="container-fluid">
-                    <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse text-center d-flex justify-content-center"
-                        id="navbarNavAltMarkup">
-                        <div class="navbar-nav">
-                            <a class="nav-link text-light active" aria-current="page" href="#">Home</a>
-                            <a class="nav-link text-light " aria-current="page" href="#">About</a>
-                            <a class="nav-link text-light " aria-current="page" href="#">Contact</a>
-                            <a class="nav-link text-light " aria-current="page" href="#">FAQ & Aftercare</a>
-                            <a class="nav-link text-light " aria-current="page" href="#">Gallery</a>
-                        </div>
-                    </div>
-                </div>
-            </nav>
+        <section class="header-container bg-dark">
+            <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+                <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+                  <img class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap" src="./imgs/WPTI_Icon_White.png"></img>
+                </a>
+                <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 pe-3">
+                <li><a href=".landing-container" class="nav-link px-2 link-secondary">Home</a></li>
+                  <li><a href="./gallery.html" class="nav-link px-2 link-light">Galleries</a></li>
+                  <li><a href="#artists" class="nav-link px-2 link-light">Artists</a></li>
+                  <li><a href="#contact" class="nav-link px-2 link-light">Contact</a></li>
+                  <li><a href="./FAQ.html" class="nav-link px-2 link-light">FAQs & Aftercare</a></li>
+                </ul>
+              </header>
         </section>
         <section class="landing-container">
             <img src="https://images.unsplash.com/photo-1565058379802-bbe93b2f703a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
                 class="background">
             <!-- <h1 class="title text-center col-12">White Pine Tattoo </h1> -->
-            <img class="title text-center col-6 col-md-4 col-lg-3 col-xl-3 col-xl-2 hero-img" src="imgs/logo1.png">
+            <img class="title text-center col-6 col-md-4 col-lg-3 col-xl-3 col-xl-2 col-xxl-2 hero-img" src="imgs/logo1.png">
             <div class="title-addr d-flex justify-content-center">
             </div>
             <div class="title-btn d-flex justify-content-center">
-                <a href="./gallery.html"><button class="btn btn-primary m-2 rounded-2 ps-4 pe-4">Contact Us</button></a>
-                <button class="btn btn-secondary m-2 rounded-2">View Galleries</button>
+                <a href="#contact"><button class="btn btn-primary m-2 rounded-2 ps-4 pe-4">Contact Us</button></a>
+                <button href="./gallery.html" class="btn btn-secondary m-2 rounded-2">View Galleries</button>
             </div>
             <br>
             <div class="containter">
@@ -71,10 +64,10 @@
                 </div>
             </div>
         </section>
-        <section class="artists-container bg-dark pt-3">
+        <section id="artists"class="artists-container bg-dark pt-3 border-top">
             <div>
                 <div class="container">
-                    <h2 class="text-center">Meet the Artists</h2>
+                    <h2 class="text-center border-bottom col-12 d-flex justify-content-center pb-2">Meet the Artists</h2>
                     <!--first artist-->
                     <div class="row d-flex mt-5">
                         <div class="col-12 col-md-6">
@@ -119,7 +112,7 @@
                                     voluptatem!
                                     <br>
                                 </p>
-                                <a class="link-primary" href>View Gallery...</a>
+                                <a class="link-success" href>View Gallery...</a>
                             </div>
                         </div>
                     </div>
@@ -169,14 +162,14 @@
                                     cumque magni numquam laboriosam! Necessitatibus assumenda nemo ullam perspiciatis
                                     dolore?
                                 </p>
-                                <a class="link-primary">View Gallery...</a>
+                                <a class="link-success">View Gallery...</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="connect-container pt-3 pb-5 bg-dark">
+        <section id="connect"class="connect-container pt-3 pb-5 bg-dark">
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
@@ -194,35 +187,37 @@
                 </div>
             </div>
         </section>
-        <section class="contact-container">
-            <div class="container">
+        <section id="contact" class="contact-container bg-dark">
+<div class="container">
+    <div class="container">
+        <div class="row">
+            <h2 class="contact-text">Want to book an appointment? fill out this form and we will get back to you
+                as soon as possible.</h2>
+            <div class="container mt-2 d-flex justify-content-center col-12 col-md-6">
                 <div class="row">
-                    <h2 class="contact-text">Want to book an appointment? fill out this form and we will get back to you
-                        as soon as possible.</h2>
-                    <div class="container mt-2">
-                        <div class="row">
-                            <form>
-                                <input class="col-12 m-1" placeholder="Name..." required>
-                                <input class="col-12 m-1" placeholder="Email..." required>
-                                <input class="col-12 m-1" placeholder="Phone..." required>
-                                <textarea class="col-12 m-1" placeholder="Your message..."></textarea>
-                                <button class="btn btn-primary">Submit</button>
-                                    </form>
-                            </div>
+                    <form class="">
+                        <input class="col-sm-12 m-0" placeholder="Name..." required>
+                        <input class="col-sm-12 m-0" placeholder="Email..." required>
+                        <input class="col-sm-12 m-0" placeholder="Phone..." required>
+                        <textarea class="col-12" placeholder="Your message..." rows="4"></textarea>
+                        <button class="btn btn-primary col-12">Submit</button>
+                            </form>
                     </div>
-                    <!-- form -->
-                    <h3 class="text-center text-white contact-text"> Or contact us at: (123) 456-7890</h3>
-                    <div class="container">
-                        <p class="bg-dark text-light">
-                            Due to a high volume of incoming messages, we encourage you to read our FAQ before sending
-                            us a message.
-                            This is to ensure that we respond to your inquiries as quickly and efficiently as possible.
-                            Currently,
-                            walk-ins are not available at this time.
-                        </p>
-                    </div>
-                </div>
             </div>
+            <!-- form -->
+            <h3 class="text-center text-white contact-text mt-4"> Or contact us at: (123) 456-7890</h3>
+            <div class="container col-12 col-md-5 d-flex justify-content-center p-3">
+                <p class="bg-dark text-light">
+                    *Due to a high volume of incoming messages, we encourage you to read our FAQ before sending
+                    us a message.
+                    This is to ensure that we respond to your inquiries as quickly and efficiently as possible.
+                    <br>Currently,
+                    walk-ins are not available at this time.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
         </section>
         <section class="faq-container bg-dark">
             <div class="container">
@@ -230,7 +225,7 @@
                     <div class="text-center">
                         <div class="container bg-dark">
                             <h2>See our FAQ for aftercare instructions and more</h2>
-                            <a><button class="btn btn-primary">Visit</button></a>
+                            <a><button class="btn btn-FAQ rounded-pill ps-4 pe-4 pt-2 pb-2">Visit</button></a>
                         </div>
 
                     </div>
